33 ms (73.48%) 0015-3sum Medium .java